[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-xpt"
version = "1.0.0"
description = "Two- and three-phase thermodynamics (2PT/3PT): absolute entropy and free energy from a single equilibrium MD trajectory"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Copyright (c) 2026 Pascal, Lin, Maiti, Goddard. All rights reserved." }
authors = [{ name = "Tod A. Pascal", email = "tpascal@ucsd.edu" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "MDAnalysis>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
gpu = ["cupy-cuda12x"]

[project.scripts]
pyxpt = "pyxpt.analysis:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyxpt = ["elements.json"]
